

0. Contents
	
	These are the release notes of the openATFX library.
	

1. Changes

	0.4.1 (Christian Rechner)
	
		- Added reading generation params from 'values', if attribute value is null
		- Implemented exporting of local column values of type 'DS_STRING' (always to XML!)
		- Implemented 'upcastMeasurement' and 'upcastSubMatrix'
		  
		  
	0.4.0 (Christian Rechner)
	
		- Multiple performance tunings in reading/writing (up to 50% faster :-))
		- Fixes in memory consumption
		- Fixed bug in DAT2ATFX converter template application model
		- Changed default context variable INDENT_XML to FALSE
		- Update to JUnit 4.10
		- Update to woodstox 4.1.3
		- Fixed bug report: http://community.openmdm.org/issue/1848

	0.3.1 (Christian Rechner)
	
		- The data type of base attributes "start_offset" and "flags_start_offset" now
		  be written to the ATFX
		- Added writing of "autogenerated" at application attribute
		- Implemented returning the unit at methods 'getValue' and 'getValueSeq'
		- Implemented reading external component files for data types
		  * DS_LONG
		  * DS_FLOAT
		  * DS_DOUBLE
		  * DS_COMPLEX
		  * DS_DCOMPLEX
		  and type specs
		  * dt_long
		  * dt_long_beo
		  * ieeefloat4
		  * ieeefloat4_beo
		  * ieeefloat8
		  * ieeefloat8_beo
		
	0.3.0 (Christian Rechner)
	
		- Completely changed the behaviour of creating application relations
		  the fulfil the ODS specification in automatically creating inverse
		  relations.
		  CAUTION: THIS MAY BREAK EXISTING CLIENT APPLICATIONS
		- Added skipping the implicit creation the 'AoExternalComponent' applElem
		  if no 'AoLocalColumn' application element exists.
		- Fixed incrementing the instance ids.

	0.2.2 (Christian Rechner)
	
		- Added ability to DIAdem DAT to ATFX converter to convert data sets
		  having different no of rows in the header file as in the binary data.
		- Added ability to change the datatype of an application attribute
		  derived from a base attribute. This necessary for several external