@@ -137,7 +137,7 @@ public class AoSessionImplTest {
     @Test
     public void testListContext() {
         try {
-            assertEquals(21, aoSession.listContext("*").getCount());
+            assertEquals(22, aoSession.listContext("*").getCount());
             assertEquals(3, aoSession.listContext("WILD*").getCount());
         } catch (AoException e) {
             fail(e.reason);
@@ -150,7 +150,7 @@ public class AoSessionImplTest {
     @Test
     public void testGetContext() {
         try {
-            assertEquals(21, aoSession.getContext("*").getCount());
+            assertEquals(22, aoSession.getContext("*").getCount());
             assertEquals(3, aoSession.getContext("WILD*").getCount());
         } catch (AoException e) {
             fail(e.reason);
@@ -182,7 +182,7 @@ public class AoSessionImplTest {
         try {
             aoSession.setContext(ODSHelper.createStringNV("NEW_CONTEXT", "test"));
             assertEquals("test", aoSession.getContextByName("NEW_CONTEXT").value.u.stringVal());
-            assertEquals(22, aoSession.listContext("*").getCount());
+            assertEquals(23, aoSession.listContext("*").getCount());
             aoSession.removeContext("NEW_CONTEXT");
         } catch (AoException e) {
             fail(e.reason);
@@ -203,7 +203,7 @@ public class AoSessionImplTest {
         try {
             aoSession.setContextString("NEW_CONTEXT", "test");
             assertEquals("test", aoSession.getContextByName("NEW_CONTEXT").value.u.stringVal());
-            assertEquals(22, aoSession.listContext("*").getCount());
+            assertEquals(23, aoSession.listContext("*").getCount());
             aoSession.removeContext("NEW_CONTEXT");
         } catch (AoException e) {
             fail(e.reason);
@@ -223,7 +223,7 @@ public class AoSessionImplTest {
         try {
             aoSession.setContextString("NEW_CONTEXT", "test");
             assertEquals("test", aoSession.getContextByName("NEW_CONTEXT").value.u.stringVal());
-            assertEquals(22, aoSession.listContext("*").getCount());
+            assertEquals(23, aoSession.listContext("*").getCount());
             aoSession.removeContext("NEW_CONTEXT");
         } catch (AoException e) {
             fail(e.reason);
